# german-openai-learner

./: .env.sample  .gitignore  pyproject.toml
src/: config.py  frequency_list.py  main.py  story_generator.py
src/helpers/: spacy.py
